crates/test-ui/ui/msg_send_special_selectors.stderr
error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_special_selectors.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![object, retain] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<8>>`
  = note: required for `MethodFamily<8>` to implement `RetainSemantics<&NSObject, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<8>` to implement `MsgSend<&NSObject, Retained<NSObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_special_selectors.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![object, release] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<9>>`
  = note: required for `MethodFamily<9>` to implement `RetainSemantics<&NSObject, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<9>` to implement `MsgSend<&NSObject, Retained<NSObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_special_selectors.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![object, autorelease] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<10>>`
  = note: required for `MethodFamily<10>` to implement `RetainSemantics<&NSObject, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<10>` to implement `MsgSend<&NSObject, Retained<NSObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/msg_send_special_selectors.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![object, dealloc] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `Retained<NSObject>` to implement `ConvertReturn<MethodFamily<11>>`
  = note: required for `MethodFamily<11>` to implement `RetainSemantics<&NSObject, Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<11>` to implement `MsgSend<&NSObject, Retained<NSObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
